Button for new child to image-track

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
 
 </div>
 
+<form id="newImage">
+    <!--        <button type="button" id="add-new">ADD</button>-->
+    <div id="fields">
+        <label for="link">LINK</label>
+        <input type="text" id="link" name="link">
+        <label for="desc">Description</label>
+        <input type="text" id="desc" name="desc">
+        <button type="button" id="send">Add this one</button>
+    </div>
+</form>
+
 </body>
 
 </html>
