images from keep to pdf -4on page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
 
 </head>
 
@@ -25,10 +27,10 @@
 
 
 <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
-    <img class="image" id="img1" src="img/osiris.jpg" draggable="false"/>
-    <img class="image" src="img/cat.jpeg" draggable="false"/>
-    <img class="image" src="img/lotr-set-new-zeland.jpg" draggable="false"/>
-    <img class="image" src="img/Scotland-Edinburgh-Scott-Monument.jpg" draggable="false"/>
+    <img class="image" id="img1" src="img/osiris.jpg" draggable="false" alt="Bennu dust" data-size="<1m" data-age="Billions of years"/>
+    <img class="image" src="img/cat.jpeg" draggable="false" alt="Bennu dust" data-size="<1m" data-age="Billions of years"/>
+    <img class="image" src="img/lotr-set-new-zeland.jpg" draggable="false" alt="Bennu dust" data-size="<1m" data-age="Billions of years"/>
+    <img class="image" src="img/Scotland-Edinburgh-Scott-Monument.jpg" draggable="false" alt="Bennu dust" data-size="<1m" data-age="Billions of years"/>
     <button id="add-new">ADD</button>
 
 </div>
