when no move set to 0 / html img descriptions

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
 <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
     <img class="image" id="img1" src="img/osiris.jpg" draggable="false" alt="Bennu dust" data-size="<1m" data-age="Billions of years"/>
-    <img class="image" src="img/cat.jpeg" draggable="false" alt="Bennu dust" data-size="<1m" data-age="Billions of years"/>
-    <img class="image" src="img/lotr-set-new-zeland.jpg" draggable="false" alt="Bennu dust" data-size="<1m" data-age="Billions of years"/>
-    <img class="image" src="img/Scotland-Edinburgh-Scott-Monument.jpg" draggable="false" alt="Bennu dust" data-size="<1m" data-age="Billions of years"/>
+    <img class="image" src="img/cat.jpeg" draggable="false" alt="cat" data-size="<1m" data-age="<40yrs"/>
+    <img class="image" src="img/lotr-set-new-zeland.jpg" draggable="false" alt="LOTR set" data-size="---" data-age="24yrs"/>
+    <img class="image" src="img/Scotland-Edinburgh-Scott-Monument.jpg" draggable="false" alt="Monument" data-size="61.11m" data-age="176yrs"/>
     <button id="add-new">ADD</button>
 
 </div>
