--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <form id="newImage">
     <!--        <button type="button" id="add-new">ADD</button>-->
     <div id="fields">
-        <label for="link">LINK</label>
+        <label for="link">LINK(only .jpg)</label>
         <input type="text" id="link" name="link">
         <label for="desc">Description</label>
         <input type="text" id="desc" name="desc">
